--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:onChangedMode="@{viewModel.modeTest}"
+                android:onChangedMode="@{viewModel.viewMode}"
                 android:onSearch="@{viewModel}"
                 app:layout_constraintBottom_toTopOf="@id/viewPager"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +41,7 @@
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="50dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:menu="@menu/bottom_navigation_bar" />
 
