--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,18 +11,76 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/button_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/card_movie"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="5dp">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_item"
-            android:layout_width="0dp"
+
+        <ImageView
+            android:id="@+id/image_poster"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@{data.title}"
+            app:layout_constraintBottom_toTopOf="@+id/layout_info"
+            app:layout_constraintDimensionRatio="h, 1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:setImageUrl="@{data.poster}"
+            tools:background="#9F9595">
+
+        </ImageView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_info"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:paddingTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/image_poster">
+
+            <ImageView
+                android:id="@+id/image_bookmark"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                app:setBookMarkImage="@{data.isBookMarked}"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/bookmark_off" />
+
+            <TextView
+                android:id="@+id/text_movie_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{data.title}"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image_bookmark" />
+
+            <TextView
+                android:id="@+id/text_movie_year"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:text="@{data.year}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_movie_title" />
+
+            <TextView
+                android:id="@+id/text_movie_type"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{data.type}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_movie_year" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
