--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:onChangedMode="@{viewModel.viewMode}"
-                android:onSearch="@{activity}"
                 android:onKeyBoardSearch="@{activity}"
+                android:onSearch="@{activity}"
                 app:layout_constraintBottom_toTopOf="@id/viewPager"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +39,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/toolbar" />
+                app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+            </androidx.viewpager2.widget.ViewPager2>
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_navigation"
