--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -27,7 +27,7 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:visible="@{activityVM.movieBookMarkList.empty}"
-                android:text="즐겨찾기 목록이 비었습니다."
+                android:text="@string/bookmark_result_empty"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
