--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,7 +27,7 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:visible="@{activityVM.movieList.empty}"
-                android:text="검색 결과가 없습니다."
+                android:text="@string/search_result_empty"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
