--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -11,27 +11,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_search"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/editText_search"
-                android:layout_width="500dp"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:ems="10"
-                android:inputType="textPersonName"
                 android:hint="영화 제목을 입력해주세요."
-                android:singleLine="true"
-                android:paddingLeft="15dp"
                 android:imeOptions="actionSearch"
+                android:inputType="textPersonName"
+                android:paddingLeft="15dp"
+                android:singleLine="true"
+                android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/button_search"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_search"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -53,12 +55,14 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:text="내 즐겨찾기"
-                tools:visibility="gone"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
