--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -3,11 +3,9 @@
     <item
         android:id="@+id/page_search"
         android:enabled="true"
-        android:icon="@null"
-        android:title="검색"/>
+        android:title="@string/search"/>
     <item
         android:id="@+id/page_bookmark"
         android:enabled="true"
-        android:icon="@null"
-        android:title="즐겨찾기"/>
+        android:title="@string/bookmark"/>
 </menu>
